[project]
name = "media-agent"
version = "0.1.0"
description = "AI-powered social media agent for product promotion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.nicegui]
tailwind = true
